# s2.bot

./: Cargo.toml  README.md
src/: main.rs
