[package]
name = "s2_bot"
version = "1.0.0"
authors = ["H0l0"]
edition = "2021"

[dependencies]
dotenv = "0.15"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.11"
features = ["cache", "framework", "standard_framework", "rustls_backend"]
